# neuralprints-fastapi

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
app/: config.py  main.py  models.py
app/api/: architecture.py  dataset.py  executables.py  models.py  tensorflow.py
app/services/: training.py
app/templates/: inference_template.py
app/utils/: md5.py
app/websockets/: sockets.py  websocket_manager.py
uploaded_datasets/: apple_quality.csv  apple_quality.meta.json
