[project]
name = "neuralprints-fastapi"
version = "0.1.0"
description = ""
authors = [
    {name = "Vladimir Nikulin",email = "mail.jorey@gmail.com"}
]
readme = "README.md"
requires-python = "~3.10"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "websockets (>=15.0.1,<16.0.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "tensorflow-io-gcs-filesystem (>=0.31.0,<0.32.0)",
    "tensorflow (>=2.19.0,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "nest-asyncio (>=1.6.0,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
packages = [
    { include = "app" }
]


[tool.poetry.scripts]
start = "app.main:__main__"
